# cub3d

./: .gitignore  .gitmodules  3d_try.c  CMakeLists.txt  Makefile  README.md  calculate_texture.c  config.h  cub.h  draw_texture.c  for_texture.h  for_texture_n_sprites.h  for_window.c  function_for_draw.c  general_function.c  general_function_for_drawing.c  key_hooks.c  main.c  main_fc.c  map.cub  map_validate.c  other.c  parse_config.c  parse_rgb.c  parser.c  parser.h  part_of_parser.c  screenshoot.c  screenshot.c  sprite_draw.c  sprite_sort.c
get_next_line/: get_next_line.c  get_next_line.h  get_next_line_utils.c
includes/: 1.xpm  2.xpm  3.xpm  4.xpm  cake.xpm  cub.h  get_next_line.h  libft.h  sprite.xpm
